# container_ada_mod03

./: Dockerfile  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/controllers/: event_controller.py  user_controller.py
backend/app/models/: event.py  user.py
backend/app/repositories/: event_repository.py  user_repository.py
backend/app/services/: event_service.py  user_service.py
devops/nginx/: nginx.conf
src/: App.jsx
src/components/Logo/: logo.jsx
src/components/Menu/: menu.jsx
src/pages/DetalhesEvento/: detalhesEvento.jsx
src/pages/Homepage/: homepage.jsx
src/pages/ListaEventos/: listaEventos.jsx
