[tool.poetry]
name = "backend"
version = "0.1.0"
description = "API de Eventos e Usuarios"
authors = ["Neto6391 <neto6391@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

